💄 fix pesky layout bug

--- a/Factory/Static/styles/root.scss
+++ b/Factory/Static/styles/root.scss
@@ -98,7 +98,6 @@
       align-items: center;
       min-width: 60vw;
       max-width: calc(100vw - 100px);
-      max-height: 60vh;
       flex-direction: column-reverse;
       form {
         ~ form {
